--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,3 +1,5 @@
+<!-- dashboard.html -->
+
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
@@ -12,8 +14,9 @@
       </section>
     </header>
     <main>
-        <h1>API GATEWAY</h1>
-        <p> Aplicação testada com sucesso </P>
+        <h1  style="text-align: center;">Engenharia de Software</h1><br>
+        <h2  style="text-align: center;">API Gateway</h2>
+        <p style="text-align: center;"> Aplicação testada com sucesso </P>
     </main>
     <footer><section></section></footer>
   </body>
