--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+<!-- index.html -->
+
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
@@ -12,8 +14,8 @@
       </section>
     </header>
     <main>
-        <h1>Login</h1>
-    <form id="loginForm">
+        <h1  style="text-align: center;">Login</h1>
+    <form id="loginForm"  style="text-align: center;">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required><br>
         <label for="password">Password:</label>
